# qcd_analysis

./: README.md  c2pt_datatype.py  c3pt_datatype.py  data_handler.py  fitter.py  general_datatype.py  lsqfit_fitter.py  pdf_datatype.py  plots.mplstyle  pyproject.toml  renorm_datatype.py
src/qcd_analysis/: c2pt_datatype.py  c2pt_models.py  c2pt_plotting.py  c2pt_utils.py  fitter.py  general_datatype.py  latex_utils.py  lsqfit_fitter.py  pdf_datatype.py  renorm_datatype.py
src/qcd_analysis/data_handling/: c2pt_datatype.py  c3pt_datatype.py  data_handler.py  energy_datatype.py
src/qcd_analysis/fitting/: fitter.py  lsqfit_fitter.py
src/qcd_analysis/models/: c2pt_models.py  energy_models.py
src/qcd_analysis/plotting/: c2pt_plotting.py  energy_plotting.py
src/qcd_analysis/utils/: c2pt_utils.py  latex_utils.py  results.py
tools/: matplotlib_pickle
