[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "qcd_analysis"
version = "0.0.1"
authors = [
  { name="Andrew Hanlon", email="ddhanlon@gmail.com" },
]
description = "Lattice QCD data analysis library"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/andrewhanlon/qcd_analysis"
Issues = "https://github.com/andrewhanlon/qcd_analysis/issues"
